# asteroids-clone

./: .gitignore  CMakeLists.txt  Makefile  README  asteroid.cpp  asteroid.h  game.cpp  game.h  main.cpp  player.cpp  player.h  sdl_wrapper.cpp  sdl_wrapper.h
Project/: asteroid.cpp  asteroid.h  game.cpp  game.h  main.cpp  player.cpp  player.h  sdl_wrapper.cpp  sdl_wrapper.h
Project/include/: asteroid.h  collision.h  game.h  moving_object.h  particle.h  player.h  sdl_wrapper.h  spaceship.h  templates.h
Project/src/: asteroid.cpp  collision.cpp  game.cpp  main.cpp  moving_object.cpp  particle.cpp  player.cpp  sdl_wrapper.cpp  spaceship.cpp
